--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-react": "6.24.1",
     "css-loader": "^6.7.4",
     "express": "4.15.4",
+    "firebase": "^9.22.2",
     "node-sass": "^9.0.0",
     "normalize.css": "7.0.0",
     "react": "^18.2.0",
