--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "css-loader": "^6.7.4",
     "express": "4.15.4",
     "firebase": "^9.22.2",
+    "moment": "^2.29.4",
     "node-sass": "^9.0.0",
     "normalize.css": "7.0.0",
     "react": "^18.2.0",
